--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "discordbot",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,15 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tylwe/bennyisgay.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/tylwe/bennyisgay/issues"
+  },
+  "homepage": "https://github.com/tylwe/bennyisgay#readme",
+  "description": ""
 }
